--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "config.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongo": "^0.1.0",
     "mongoose": "^8.0.3",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
